--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
       dockerfile: ./Dockerfile
       context: ./www
     ports:
-      - "80:80"
+      - 80:80
     volumes:
       - ./www:/var/www/html
       - ./config/etc:/php_conf
@@ -16,7 +16,7 @@ services:
   mysql:
     image: mysql:5.7.39
     ports:
-      - "3306:3306"
+      - 3306:3306
     environment: 
         MYSQL_ROOT_PASSWORD: root
     volumes:
@@ -35,4 +35,4 @@ services:
     env_file:
       - ./.env
     entrypoint:
-        /dir/extract.sh
+      - /dir/extract.sh
